--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Foreningen UniSail"
+title: "Betty af Aalborg"
 layout: single
 author_profile: true
 header:
@@ -8,12 +8,12 @@ header:
   cta_label: "<i class='fa fa-life-ring'></i> Pak køjesækken og tag med"
   cta_url: "/kom-med/"
   caption:
-excerpt: 'UniSail er en forening omkring kutteren Betty der hører hjemme i Aalborg.<br/><br/> <small>Siden er under konstruktion</small>'
+excerpt: 'Betty er en kutter der hører hjemme i Aalborg, og bruges til sail training.<br/><br/> <small>Siden er under konstruktion</small>'
 ---
 
 {% include base_path %}
 
-UniSail er en forening omkring kutteren Betty der hører hjemme i Aalborg
+Dette er hjemmesiden for forening omkring kutteren Betty der hører hjemme i Aalborg. 
 
 
 
