--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: "Betty af Aalborg"
-layout: single
+layout: home
 author_profile: true
 header:
   overlay_image: assets/images/betty_splash.png
